# sql-scaler

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_baseline.py
data/: orders.csv  users.csv
envs/: __init__.py
envs/sql_optimizer/: __init__.py  env.py  grader.py  models.py  tasks.py  utils.py
server/: app.py
